<resources>
    <string name="app_name">FoodRunner</string>
    <string name="Credential1">Enter your Username or Email</string>
    <string name="Credential2">Enter your Password</string>
    <string name="BtnLogin">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="footerText">Designed by Prateek</string>
    <string name="companyName">Food Runner</string>
    <string name="Registration">Register</string>
    <string name="DisplayText">Hello User!</string>
    <string name="FullName">Enter Full Name</string>
    <string name="MobileNumber">Enter Your Mobile Number</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="RegisterYourself">Register Yourself</string>
    <string name="Register">Register</string>
    <string name="DeliveryAddress">Delivery Address</string>
    <string name="ForgotPasswordText">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="faq">FAQ</string>
    <string name="drawer_title">FoodRunner</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="faq_fragment">FAQ Fragment</string>
    <string name="action_sort">Sort</string>
    <string name="credentials1">Enter Full Name</string>
    <string name="credentials2">Enter Your Email</string>
    <string name="credentials3">Enter Your Number</string>
    <string name="credentials4">Enter Your Address</string>
    <string name="btnSave">Save</string>
    <string name="faq_text">This is a test app</string>
    <string name="faq_desc">Internshala Trainings</string>
    <string name="preference_file_name">Foodrunner Preferences</string>

</resources>