<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterYourself"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etFullName"
        android:layout_below="@+id/txtHeader"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/FullName"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="text"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etEmail2"
        android:layout_below="@+id/etFullName"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Credential1"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/etMobileNumber2"
        android:layout_below="@+id/etEmail2"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/MobileNumber"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_below="@+id/etMobileNumber2"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DeliveryAddress"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@+id/etAddress"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Credential2"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_below="@+id/etPassword"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ConfirmPassword"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#ff1919"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Register"
        android:textSize="15sp"
        android:textColor="#ffff"/>

</RelativeLayout>