<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgCompanyLogo"
        android:src="@drawable/zootzoot1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/etUsername"
        android:layout_below="@+id/imgCompanyLogo"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Credential1"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="text"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@+id/etUsername"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Credential2"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#ff1919"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/BtnLogin"
        android:textSize="15sp"
        android:textColor="#ffff"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registration"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:textSize="15sp"/>
</RelativeLayout>