<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgCompanyLogo"
        android:src="@drawable/zootzoot1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/txtForgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgCompanyLogo"
        android:text="@string/ForgotPasswordText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etEmail2"
        android:layout_below="@+id/txtForgotPasswordText"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Credential1"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etMobileNumber2"
        android:layout_below="@+id/etEmail2"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/MobileNumber"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="8dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#ff1919"
        android:layout_below="@+id/etMobileNumber2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textSize="15sp"
        android:textColor="#ffff"/>

</RelativeLayout>